@@ -1,4 +1,8 @@
 Changes for 1.6.1.2
+* Allowing new option for the Play By Email / Play By Forum poster, to "Include Overall Dice Statistics" in the post/email. (veqryn)
+
+* Improving the menu "GAME -> SHOW DICE STATS" to give information per player, as well as totals. (veqryn)
+
 * Getting engine to record if the dice thrown is in Combat or not, for the dice statistics. (veqryn)
 
 * Getting engine to record which player is rolling dice for the dice statistics. (veqryn)
